# Anastasia

./: .clang-format  .gitignore  CMakeLists.txt  README.md  doxyfile  vulkantest  xmake.lua
.cache/clangd/index/: main.cpp.A7B38EA6992912F7.idx
cmake/: AnaCompilerOptions.cmake  AnaHelper.cmake  CPM.cmake  CompilerOptions.cmake  External.cmake
doc/: REFACTOR_PLAN.md  conversation_summary.md
include/: helpfunc.h  stb_image.h
shader/: shader.frag  shader.vert
shaders/: frag.spv  shader.frag  shader.vert  vert.spv
src/: ANA_pipeline.cpp  ANA_pipeline.h  ANA_window.cpp  ANA_window.h  app.cpp  app.h  helpfunc.cpp  main.cpp  rendersystem.cpp  rendersystem.h  test.cpp
src/api/: CMakeLists.txt  gameobject.h  pipeline.cpp  pipeline.h
src/api/vulkan/: ANA_window.cpp  ANA_window.h  device.cpp  device.h  model.cpp  model.h  renderer.cpp  renderer.h  swapchain.cpp  swapchain.h
src/camera/: CMakeLists.txt  camera.cpp  camera.h
src/common/: CMakeLists.txt  hash.h
src/event/: CMakeLists.txt  event.h  eventManager.cpp  eventManager.h  input.h
src/math/: CMakeLists.txt  math.cpp  math.h
src/rhi/include/: context.h  device.h  handles.h  pipeline_state.h  render_graph.h  resource.h  resource_binding.h  rhi_def.h
src/threads/: CMakeLists.txt  threadSafeQueue.h  threadpool.cpp
src/vk/include/: vk_device.h
src/vk/src/: vk_device.cpp
src/wsi/: CMakeLists.txt  keymap.h  wsi.cpp  wsi.h
